--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -313,8 +313,9 @@ input[type="button"]:focus {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  min-height: 100vh;
-  /* Use this with margin auto on the footer to make it sticky*/
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
 }
 
 .clear-weather {
@@ -351,4 +352,16 @@ input[type="button"]:focus {
   background-image: url("/assets/img/thunderstorm.jpg") !important;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+article {
+  background-color: honeydew;
+  opacity: .5;
+  border-radius: 8px;
+  height: 40%;
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
