--- a/assets/scss/5-pages/_page-home.scss
+++ b/assets/scss/5-pages/_page-home.scss
@@ -6,7 +6,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  min-height: 100vh; /* Use this with margin auto on the footer to make it sticky*/
+          justify-content: center;
+  height: 100vh;
+  align-items: center;
 }
 
 .clear-weather {
@@ -31,4 +33,18 @@
 
 .stormy {
   @include weatherBg(thunderstorm);
+}
+
+article {
+  background-color: honeydew;
+  opacity: .5;
+  border-radius: 8px;
+  height: 40%;
+  width: 20%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
 }
