--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -257,7 +257,7 @@ body {
   font-family: 'Fira Sans', sans-serif;
   font-size: 14px;
   line-height: 1.6;
-  color: #666;
+  color: #444;
   background-color: white;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
@@ -354,6 +354,14 @@ input[type="button"]:focus {
   background-position: center;
 }
 
+h1 {
+  font-size: 3em;
+}
+
+h2 {
+  font-size: 1.7em;
+}
+
 article {
   background-color: honeydew;
   opacity: .5;
@@ -366,6 +374,13 @@ article {
   align-items: center;
 }
 
+article div, article span, article a {
+  color: #111;
+}
+
 .temp-reading {
   display: flex;
+  margin-bottom: 0.6em;
+  font-weight: bold;
+  font-size: 1.6em;
 }
