--- a/assets/scss/5-pages/_page-home.scss
+++ b/assets/scss/5-pages/_page-home.scss
@@ -35,6 +35,14 @@
   @include weatherBg(thunderstorm);
 }
 
+h1 {
+  font-size: 3em;
+}
+
+h2 {
+  font-size: 1.7em;
+}
+
 article {
   background-color: honeydew;
   opacity: .5;
@@ -47,10 +55,15 @@ article {
   justify-content: center;
   align-items: center;
 
+
+  div, span, a {
+    color: #111;
+  }
 }
-
-
 
 .temp-reading {
   display: flex;
+  margin-bottom: 0.6em;
+  font-weight: bold;
+  font-size: 1.6em;
 }
