change background image path for master branch to work on local machine

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -319,37 +319,37 @@ input[type="button"]:focus {
 }
 
 .clear-weather {
-  background-image: url("/local-weather-app/assets/img/clear.jpg") !important;
+  background-image: url("/assets/img/clear.jpg") !important;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .cloudy {
-  background-image: url("/local-weather-app/assets/img/broken_clouds.jpg") !important;
+  background-image: url("/assets/img/broken_clouds.jpg") !important;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .rainy {
-  background-image: url("/local-weather-app/assets/img/rain.jpg") !important;
+  background-image: url("/assets/img/rain.jpg") !important;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .misty {
-  background-image: url("/local-weather-app/assets/img/mist.jpg") !important;
+  background-image: url("/assets/img/mist.jpg") !important;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .snowy {
-  background-image: url("/local-weather-app/assets/img/snowy.jpg") !important;
+  background-image: url("/assets/img/snowy.jpg") !important;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 .stormy {
-  background-image: url("/local-weather-app/assets/img/thunderstorm.jpg") !important;
+  background-image: url("/assets/img/thunderstorm.jpg") !important;
   background-repeat: no-repeat;
   background-position: center;
 }
